// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleBar should render a label inside it 1`] = `
<div
  className="root"
>
  Wings is great!
</div>
`;

exports[`TitleBar should render a simple div with a class 1`] = `
<div
  className="root"
>
  
</div>
`;
